# Mush

./: CMakeLists.txt  main.cpp
Mush/: mush.cpp  mush.h
